# OpenJudge

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  API_DOCUMENTATION_ZH.md  README.md  README_zh.md  mkdocs.yml  pyproject.toml  pytest.ini  workflow.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: deploy-mkdocs.yml  pre-commit.yml
cookbooks/auto_arena/examples/: config.yaml
cookbooks/data_refinement/: refinement.py
cookbooks/grader_validation/: accuracy.py  grader_validator.py  rewardbench2.py
cookbooks/multi_turn_dialogue/: multi_turn_evaluation.py
cookbooks/paper_review/: __init__.py  models.py  pipeline.py  report.py
cookbooks/paper_review/disciplines/: __init__.py  base.py  biology.py  chemistry.py  cs.py  economics.py  environmental_science.py  mathematics.py  medicine.py  physics.py  psychology.py  social_sciences.py
cookbooks/paper_review/graders/: correctness.py  criticality.py  format.py  review.py
cookbooks/paper_review/prompts/: __init__.py  correctness.py  criticality.py  review.py
cookbooks/training_judge_model/grpo/: chat_rl_dataset.py  grader_rl_dataset.py
cookbooks/training_judge_model/sft/: README.md
cookbooks/zero_shot_evaluation/: __init__.py  __main__.py  chart_generator.py  report_generator.py  schema.py  zero_shot_pipeline.py
cookbooks/zero_shot_evaluation/core/: __init__.py  checkpoint.py  config.py  evaluator.py  query_generator.py  response_collector.py  rubric_generator.py  schema.py
docs/: index.md
docs/applications/: data_refinement.md  paper_review.md  select_rank.md  zero_shot_evaluation.md
docs/building_graders/: create_custom_graders.md  generate_graders_from_data.md  generate_rubrics_as_graders.md  overview.md  training_judge_models.md
docs/building_graders/training/: bradley_terry.md  generative_pairwise.md  generative_pointwise.md  overview.md  sft.md
docs/built_in_graders/: agent_graders.md  code_math.md  format.md  general.md  multi_turn.md  multimodal.md  overview.md  text.md
docs/community/: animations-demo.md  contributing.md  style-guide.md
docs/get_started/: build_reward.md  core_concepts.md  evaluate_ai_agents.md  quickstart.md
docs/integrations/: langfuse.md  langsmith.md  verl.md
docs/javascripts/: code-copy.js  nav-scroll-fix.js
docs/running_graders/: evaluation_reports.md  run_tasks.md
docs/stylesheets/: animations.css  code-enhancements.css  feature-cards.css  jupyter-simple.css  mermaid.css  mkdocstrings.css  nav-scroll-fix.css  responsive.css  syntax-highlight.css  tabbed-code.css  table-enhancements.css
docs/validating_graders/: overview.md  rewardbench2.md
open_judge/: __init__.py
open_judge/graders/agent/: __init__.py
open_judge/graders/common/: relevance.py
open_judge/models/: base_chat_model.py
open_judge/runner/: grading_runner.py
openjudge/generator/iterative_rubric/: categorizer.py  generator.py  query_rubric_generator.py
openjudge/graders/: base_grader.py  function_grader.py  llm_grader.py
openjudge/graders/agent/: utils.py
openjudge/graders/code/: code_excution.py  code_execution.py  code_style.py  patch_similarity.py  syntax_checker.py
openjudge/graders/common/: correctness.py  hallucination.py  harmfulness.py  instruction_following.py  relevance.py  search_correctness.py
openjudge/graders/format/: length_penalty.py  ngram_repetition_penalty.py  reasoning_format.py  reasoning_tool_format.py
openjudge/graders/math/: math_expression_verify.py
openjudge/graders/multi_turn/: __init__.py  anaphora_resolution_grader.py  context_memory_grader.py  instruction_clarification_grader.py  proactive_interaction_grader.py  response_repetition_grader.py  self_correction_grader.py  topic_switch_grader.py
openjudge/graders/multimodal/: image_coherence.py  image_helpfulness.py  text_to_image.py
openjudge/graders/text/: number_accuracy.py  similarity.py  string_match.py
openjudge/models/: __init__.py  minimax_chat_model.py  openai_chat_model.py  qiniu_chat_model.py  qwen_vl_model.py
openjudge/runner/: __init__.py
openjudge/runner/resource_executor/: __init__.py  base_resource_executor.py  semaphore_resource_executor.py
openjudge/utils/: grader_info.py  utils.py
rm_gallery/core/: __init__.py  registry.py
rm_gallery/core/analyzer/: base_analyzer.py
rm_gallery/core/generator/: auto_rubric_generator.py  base_generator.py  llm_grader_generator.py
rm_gallery/core/grader/: auto_grader.py  auto_rubrics.py  base.py
rm_gallery/core/graders/: function_grader.py  llm_grader.py
rm_gallery/core/models/: base_chat_model.py  dashscope_chat_model.py  openai_chat_model.py  qwen_vl_model.py
rm_gallery/core/runner/: base.py  base_runner.py  grading.py  grading_runner.py
rm_gallery/core/schema/: __init__.py  block.py  data.py  grader.py  message.py  template.py
rm_gallery/core/utils/: concurrency.py  instance.py  mapping.py  tokenizer.py  utils.py
rm_gallery/gallery/evaluation/: __init__.py  (+3 more)
skills/openjudge/: SKILL.md  analyzer.md  generator.md  graders.md  pipeline.md
skills/paper-review/: SKILL.md  reference.md
tests/: test_grading_runner.py  test_mapping.py  test_template.py
tests/benchmarks/: test_rewardbench2.py
tests/data/: grader_cases.json  run_grader.py
tests/docs/: test_building_graders_custom.py  test_building_graders_overview.py
tests/generator/: test_auto_grader.py  test_auto_rubric.py  test_iterative_rubric.py
tests/grader/: test_tool_call_accuracy.py  test_tool_call_success.py
tests/graders/: test_base_grader.py  test_harmfulness_complete_demo.py  test_llm_grader.py
tests/llm_judge/: test_hallucination.py  test_harmfulness.py  test_helpfulness.py  test_instruction_adherence.py  test_reference_adherence.py
tests/models/: test_minimax_chat_model.py  test_openai_chat_model.py  test_qiniu_chat_model.py  test_qwen_vl_model.py
tests/rubric/: test_auto_grader_batch.py  test_auto_grader_single.py  test_auto_rubric.py
tests/runner/: test_grading_runner.py
tests/utils/: test_grader_info.py  test_mapping.py
ui/shared/: constants.py
(+332 files in other folders)
