[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "rm-gallery"
dynamic = ["version"]
description = "RM-Gallery: A Next-Generation Evaluation System for AI Model Assessment"
readme = "README.md"
authors = [
  { name = "Haoran Chen", email = "chenhaoran.chr@alibaba-inc.com" },
  { name = "Yuhao Cui", email = "cyh262498@alibaba-inc.com" },
  { name = "Jiaji Deng", email = "dengjiaji.djj@alibaba-inc.com" },
  { name = "Qingxu Fu", email = "fuqingxu.fqx@alibaba-inc.com" },
  { name = "Yuan Gao", email = "yunze.gy@alibaba-inc.com" },
  { name = "Sen Huang", email = "huangsen.huang@alibaba-inc.com" },
  { name = "Li Yu", email = "jinli.yl@alibaba-inc.com" },
  { name = "Boyin Liu", email = "liuboyin.lby@alibaba-inc.com" },
  { name = "Zhaoyang Liu", email = "jingmu.lzy@alibaba-inc.com" },
  { name = "Yunzhou Shi", email = "yunzhou.syz@alibaba-inc.com" },
  { name = "Lipeng Xie", email = "xielipeng.xlp@alibaba-inc.com" },
  { name = "Yunpeng Zhai", email = "zhaiyunpeng.zyp@alibaba-inc.com" },
  { name = "Zhuo Zhang", email = "zz297429@alibaba-inc.com" },
  { name = "Anni Zou", email = "zouanni.zan@alibaba-inc.com" }
]
license = "Apache-2.0"
keywords = ["deep-learning", "evaluation", "ai-model", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/modelscope/RM-Gallery"
Repository = "https://github.com/modelscope/RM-Gallery"
Documentation = "https://modelscope.github.io/RM-Gallery/"

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = ">=2.2.3,<3.0.0"
pyyaml = ">=6.0.2,<7.0.0"
loguru = ">=0.7.3,<0.8.0"
jsonlines = ">=4.0.0,<5.0.0"
jsonschema = ">=4.25.0,<5.0.0"
json_repair = ">=0.54.0,<1.0.0"
pydantic = ">=2.11.5,<3.0.0"
openai = ">=1.85.0,<2.0.0"
retry = ">=0.9.2,<0.10.0"
math-verify = ">=0.7.0,<0.8.0"
shortuuid = ">=1.0.0,<2.0.0"
tenacity = ">=9.1.0,<10.0.0"
fire = "*"
tabulate = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = ">=8.3.5,<9.0.0"
sphinx-gallery = "*"
furo = "*"
myst_parser = "*"
anyio = "*"
pytest-asyncio = "*"
pytest-tornasync = "*"
pytest-trio = "*"
pytest-twisted = "*"
twisted="*"
rouge-score = "*"
python-Levenshtein = "*"
sacrebleu = "*"

[tool.poetry.group.optional.dependencies]
bitsandbytes = {version = ">=0.46.1", optional = true}
label-studio = {version = ">=1.17.0", optional = true}
py-data-juicer = {version = ">=1.3.3", optional = true}
pytest-asyncio = {version = ">=1.1.0,<2.0.0", optional = true}
transformers = {version = ">=4.52.4,<5.0.0", optional = true}

[tool.poetry.extras]
full = ["bitsandbytes", "label-studio", "py-data-juicer", "pytest-asyncio", "transformers"]
optional = ["transformers", "pytest-asyncio"]
light = []

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true