[project]
name = "open_judge"
dynamic = ["version"]
description = "OpenJudge: A Next-Generation Evaluation System for AI Model Assessment"
readme = "README.md"
authors = [
  { name = "Haoran Chen", email = "chenhaoran.chr@alibaba-inc.com" },
  { name = "Yuhao Cui", email = "cyh262498@alibaba-inc.com" },
  { name = "Jiaji Deng", email = "dengjiaji.djj@alibaba-inc.com" },
  { name = "Qingxu Fu", email = "fuqingxu.fqx@alibaba-inc.com" },
  { name = "Yuan Gao", email = "yunze.gy@alibaba-inc.com" },
  { name = "Sen Huang", email = "huangsen.huang@alibaba-inc.com" },
  { name = "Li Yu", email = "jinli.yl@alibaba-inc.com" },
  { name = "Boyin Liu", email = "liuboyin.lby@alibaba-inc.com" },
  { name = "Zhaoyang Liu", email = "jingmu.lzy@alibaba-inc.com" },
  { name = "Yunzhou Shi", email = "yunzhou.syz@alibaba-inc.com" },
  { name = "Lipeng Xie", email = "xielipeng.xlp@alibaba-inc.com" },
  { name = "Yunpeng Zhai", email = "zhaiyunpeng.zyp@alibaba-inc.com" },
  { name = "Zhuo Zhang", email = "zz297429@alibaba-inc.com" },
  { name = "Anni Zou", email = "zouanni.zan@alibaba-inc.com" }
]
license = "Apache-2.0"
keywords = ["deep-learning", "evaluation", "ai-model", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "loguru>=0.7.3,<0.8.0",
    "json_repair>=0.54.0,<1.0.0",
    "pydantic>=2.11.5,<3.0.0",
    "openai>=1.85.0,<2.0.0",
    "tenacity>=9.1.0,<10.0.0",
    "math-verify>=0.7.0,<0.8.0",
    "tqdm>=4.66.0,<5.0.0",
    "fire",
    "numpy>=1.22.0,<2.0.0",
    "dashscope>=1.19.0",
    "tiktoken>=0.7.0",
    "nltk>=3.8.1",
    "jieba>=0.42.1",
    "sacrebleu>=2.0.0",
    "rouge-score>=0.1.2",
    "python-Levenshtein>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest>=8.3.5,<9.0.0",
    "sphinx-gallery",
    "furo",
    "myst_parser",
    "anyio",
    "pytest-asyncio",
    "pytest-tornasync",
    "pytest-trio",
    "pytest-twisted",
    "twisted",
    "python-dotenv"
]
verl = [
    "transformers>=4.52.4,<5.0.0",
    "verl"
]

[project.urls]
Homepage = "https://github.com/modelscope/OpenJudge"
Repository = "https://github.com/modelscope/OpenJudge"
Documentation = "https://modelscope.github.io/OpenJudge/"

[tool.setuptools]
packages = { find = { where = ["."] } }
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "open_judge.__version__"}